# StreamToActionTranslator

./: CMakeLists.txt  CMakePresets.json  README.md
lib_main/: StreamToActionTranslator.h
src/: CMakeLists.txt  StreamToActionTranslator.h  driver_main.cpp  flux.h  test_driver_main.cpp
src/lib_main/: CMakeLists.txt
tests/: CMakeLists.txt  rand_gen.h  test_filter.cpp  test_main.cpp  test_utils.h
